--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.analysis.autoImportCompletions": true,
-    "workbench.editorLargeFileConfirmation": 50
+    "workbench.editorLargeFileConfirmation": 50,
+    "git.ignoreLimitWarning": true
 }
