added log transform to target variable improving ndcg@K by 60%

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 usersha1-profile.csv
 usersha1-profile.tsv
+rs_main_v2/
+rs_main_v2_refactored_backup/
+rs_main_v2_refactored_copy/
 eda.txt
 cufile.log
 data/
